2011-02-08 Thomas Ernst <typo3@thernst.de>
	* [Feature #12860] Page where userdefined fields are stored should be configurable

2011-01-30 Thomas Ernst <typo3@thernst.de>
	* [Feature #12115] Write new documentation

2011-01-12 Thomas Ernst <typo3@thernst.de>
	* [Feature #11720] templates simplified, static templates split, coding transfered into mvc concept

2010-12-25 Thomas Ernst	<typo3@thernst.de>
	* [Feature #11563] Allow some users to register other users as participants for events
	* [Bug #11716] Wrong default fieldgroup used
	* [Feature #11717] Add examples for modified cal templates
	* Updated documentation

2010-10-10 Thomas Ernst <typo3@thernst.de>
	* Published Version 0.6.2

2010-09-11 Thomas Ernst <typo3@thernst.de>
	* [Bug #9685] Deprecated TYPO3 function t3lib_div::makeInstanceClassName (thanks to J. Kummer)

2010-08-31 Thomas Ernst <typo3@thernst.de>
	* [Bug #9523] Userfields not displayed in same order as defined	

2010-06-19 Thomas Ernst <typo3@thernst.de>
	* Published version 0.6.1

2010-06-03 Thomas Ernst <typo3@thernst.de>
	* [Bug 8043] Labels in locallang.xml contain dots, therefore texts can'b be changed via TS
	
2010-05-30 Thomas Ernst <typo3@thernst.de>
	* Published version 0.6.0

2010-05-12 Thomas Ernst <typo3@thernst.de>
	* [Feature 6376] Number of attendees per registration

2010-05-11 Thomas Ernst <typo3@thernst.de>
	* [Bug 7741] Double registration form in single event view
	* [Feature 7742] Allow frontend usergroups to see registrations

2010-04-21 Thomas Ernst <typo3@thernst.de>
	* [Feature 7057] Nicer selection of fieldgroups in backend
	* [Feature 7057] Fieldgroup selection in frontend editing
	* [Feature 7057] Manual updated

2010-04-18 Thomas Ernst <typo3@thernst.de>
	* [Feature 7057] Enable different sets of userfields
	
2010-04-14 Thomas Ernst <typo3@thernst.de>
	* [Bug 7036] cal frontend editing: Create event not working due to register4cal constraints