@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext "register4cal".
 #
-# Auto generated 12-01-2011 06:37
+# Auto generated 09-02-2011 06:08
 #
 # Manual updates:
 # Only the data in the array - everything else is removed by next
@@ -11,7 +11,7 @@
 ########################################################################
 
 $EM_CONF[$_EXTKEY] = array(
-	'title' => 'Registrations for calender events',
+	'title' => 'Registrations for calendar events',
 	'description' => 'Adds a registration functionality to the CAL extension. The registration form can be displayed with the event single display and the event list of the CAL extension. Lists of registrations for users and organizers can be displayed via plugins. Confirmation and notification emails can be sent. All fields from event, user, location and organizer can be used. Additional fields for the registration can be defined via TypoScript.',
 	'category' => 'plugin',
 	'author' => 'Thomas Ernst',
@@ -33,7 +33,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'constraints' => array(
 		'depends' => array(
 			'php' => '5.1.0-0.0.0',
-			'typo3' => '4.0.0-4.4.99',
+			'typo3' => '4.0.0-4.5.99',
 			'cal' => '',
 		),
 		'conflicts' => array(
@@ -41,7 +41,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:66:{s:9:"ChangeLog";s:4:"8029";s:10:"README.txt";s:4:"ee2d";s:20:"class.ext_update.php";s:4:"3b38";s:21:"ext_conf_template.txt";s:4:"8e06";s:12:"ext_icon.gif";s:4:"ecda";s:17:"ext_localconf.php";s:4:"66cf";s:15:"ext_php_api.dat";s:4:"5f4f";s:14:"ext_tables.php";s:4:"3206";s:14:"ext_tables.sql";s:4:"d6b7";s:31:"icon_tx_register4cal_fields.gif";s:4:"475a";s:34:"icon_tx_register4cal_fieldsets.gif";s:4:"475a";s:38:"icon_tx_register4cal_registrations.gif";s:4:"0221";s:16:"locallang_db.xml";s:4:"8b8e";s:17:"locallang_tca.php";s:4:"9b6b";s:20:"locallang_update.xml";s:4:"47d2";s:7:"tca.php";s:4:"ba25";s:42:"calview/class.tx_register4cal_activate.php";s:4:"1d52";s:42:"calview/class.tx_register4cal_fieldset.php";s:4:"a72e";s:41:"calview/class.tx_register4cal_listreg.php";s:4:"54a9";s:46:"calview/class.tx_register4cal_maxattendees.php";s:4:"4dba";s:40:"calview/class.tx_register4cal_regend.php";s:4:"5253";s:42:"calview/class.tx_register4cal_regstart.php";s:4:"7b16";s:40:"calview/class.tx_register4cal_submit.php";s:4:"e607";s:42:"calview/class.tx_register4cal_waitlist.php";s:4:"7acb";s:42:"classes/class.tx_register4cal_datetime.php";s:4:"c764";s:45:"classes/class.tx_register4cal_tsparserext.php";s:4:"f4cb";s:53:"controller/class.tx_register4cal_admin_controller.php";s:4:"e9cd";s:52:"controller/class.tx_register4cal_base_controller.php";s:4:"57c8";s:58:"controller/class.tx_register4cal_listoutput_controller.php";s:4:"0dba";s:60:"controller/class.tx_register4cal_listregister_controller.php";s:4:"636d";s:62:"controller/class.tx_register4cal_singleregister_controller.php";s:4:"0038";s:58:"controller/class.tx_register4cal_validation_controller.php";s:4:"d2e8";s:14:"doc/manual.pdf";s:4:"8564";s:14:"doc/manual.sxw";s:4:"2d32";s:17:"doc/manual_de.pdf";s:4:"59bd";s:17:"doc/manual_de.sxw";s:4:"bcd8";s:45:"hooks/class.tx_register4cal_backend_hooks.php";s:4:"844b";s:46:"hooks/class.tx_register4cal_frontend_hooks.php";s:4:"55d1";s:50:"model/class.tx_register4cal_registration_model.php";s:4:"2701";s:40:"model/class.tx_register4cal_settings.php";s:4:"4f20";s:33:"pi1/class.tx_register4cal_pi1.php";s:4:"9497";s:19:"pi1/flexform_ds.xml";s:4:"37f1";s:26:"static/basic/constants.txt";s:4:"80ae";s:22:"static/basic/setup.txt";s:4:"3949";s:31:"static/fe-editing/constants.txt";s:4:"80ae";s:27:"static/fe-editing/setup.txt";s:4:"0fd5";s:34:"static/old_templates/constants.txt";s:4:"80ae";s:30:"static/old_templates/setup.txt";s:4:"d030";s:27:"templates/flashmessages.css";s:4:"4e2c";s:23:"templates/register.tmpl";s:4:"940b";s:27:"templates/register_old.tmpl";s:4:"16d4";s:41:"templates/cal_examples/confirm_event.tmpl";s:4:"17ba";s:40:"templates/cal_examples/create_event.tmpl";s:4:"9a6c";s:39:"templates/cal_examples/event_model.tmpl";s:4:"4520";s:32:"templates/cal_examples/list.tmpl";s:4:"a3f7";s:37:"templates/cal_examples/typoscript.txt";s:4:"fa04";s:23:"templates/gfx/error.png";s:4:"e4dd";s:29:"templates/gfx/information.png";s:4:"3750";s:24:"templates/gfx/notice.png";s:4:"a882";s:20:"templates/gfx/ok.png";s:4:"8bfe";s:25:"templates/gfx/warning.png";s:4:"c847";s:40:"view/class.tx_register4cal_base_view.php";s:4:"9f2e";s:46:"view/class.tx_register4cal_listoutput_view.php";s:4:"fa44";s:44:"view/class.tx_register4cal_register_view.php";s:4:"4f07";s:52:"view/class.tx_register4cal_userdefinedfield_view.php";s:4:"f3c8";s:18:"view/locallang.xml";s:4:"3842";}',
+	'_md5_values_when_last_written' => 'a:67:{s:9:"ChangeLog";s:4:"a77c";s:10:"README.txt";s:4:"ee2d";s:20:"class.ext_update.php";s:4:"3b38";s:21:"ext_conf_template.txt";s:4:"ab0a";s:12:"ext_icon.gif";s:4:"ecda";s:17:"ext_localconf.php";s:4:"3bd6";s:15:"ext_php_api.dat";s:4:"5f4f";s:14:"ext_tables.php";s:4:"6eac";s:14:"ext_tables.sql";s:4:"d6b7";s:31:"icon_tx_register4cal_fields.gif";s:4:"475a";s:34:"icon_tx_register4cal_fieldsets.gif";s:4:"475a";s:38:"icon_tx_register4cal_registrations.gif";s:4:"0221";s:16:"locallang_db.xml";s:4:"8b8e";s:17:"locallang_tca.php";s:4:"9b6b";s:20:"locallang_update.xml";s:4:"47d2";s:14:"svn-commit.tmp";s:4:"e3a8";s:7:"tca.php";s:4:"f73f";s:42:"calview/class.tx_register4cal_activate.php";s:4:"1d52";s:42:"calview/class.tx_register4cal_fieldset.php";s:4:"a72e";s:41:"calview/class.tx_register4cal_listreg.php";s:4:"54a9";s:46:"calview/class.tx_register4cal_maxattendees.php";s:4:"4dba";s:40:"calview/class.tx_register4cal_regend.php";s:4:"5253";s:42:"calview/class.tx_register4cal_regstart.php";s:4:"7b16";s:40:"calview/class.tx_register4cal_submit.php";s:4:"e607";s:42:"calview/class.tx_register4cal_waitlist.php";s:4:"7acb";s:42:"classes/class.tx_register4cal_datetime.php";s:4:"c764";s:45:"classes/class.tx_register4cal_tsparserext.php";s:4:"f4cb";s:53:"controller/class.tx_register4cal_admin_controller.php";s:4:"e9cd";s:52:"controller/class.tx_register4cal_base_controller.php";s:4:"09be";s:58:"controller/class.tx_register4cal_listoutput_controller.php";s:4:"0dba";s:60:"controller/class.tx_register4cal_listregister_controller.php";s:4:"636d";s:62:"controller/class.tx_register4cal_singleregister_controller.php";s:4:"0038";s:58:"controller/class.tx_register4cal_validation_controller.php";s:4:"d2e8";s:17:"doc/manual-de.pdf";s:4:"4f1e";s:17:"doc/manual-de.sxw";s:4:"5893";s:14:"doc/manual.pdf";s:4:"fa1e";s:14:"doc/manual.sxw";s:4:"7ebf";s:45:"hooks/class.tx_register4cal_backend_hooks.php";s:4:"844b";s:46:"hooks/class.tx_register4cal_frontend_hooks.php";s:4:"55d1";s:50:"model/class.tx_register4cal_registration_model.php";s:4:"5d29";s:40:"model/class.tx_register4cal_settings.php";s:4:"e242";s:33:"pi1/class.tx_register4cal_pi1.php";s:4:"9497";s:19:"pi1/flexform_ds.xml";s:4:"37f1";s:26:"static/basic/constants.txt";s:4:"80ae";s:22:"static/basic/setup.txt";s:4:"3949";s:31:"static/fe-editing/constants.txt";s:4:"80ae";s:27:"static/fe-editing/setup.txt";s:4:"0fd5";s:34:"static/old_templates/constants.txt";s:4:"80ae";s:30:"static/old_templates/setup.txt";s:4:"d030";s:27:"templates/flashmessages.css";s:4:"4e2c";s:23:"templates/register.tmpl";s:4:"435e";s:27:"templates/register_old.tmpl";s:4:"16d4";s:41:"templates/cal_examples/confirm_event.tmpl";s:4:"17ba";s:40:"templates/cal_examples/create_event.tmpl";s:4:"9a6c";s:39:"templates/cal_examples/event_model.tmpl";s:4:"4520";s:32:"templates/cal_examples/list.tmpl";s:4:"a3f7";s:37:"templates/cal_examples/typoscript.txt";s:4:"fa04";s:23:"templates/gfx/error.png";s:4:"e4dd";s:29:"templates/gfx/information.png";s:4:"3750";s:24:"templates/gfx/notice.png";s:4:"a882";s:20:"templates/gfx/ok.png";s:4:"8bfe";s:25:"templates/gfx/warning.png";s:4:"c847";s:40:"view/class.tx_register4cal_base_view.php";s:4:"c0d0";s:46:"view/class.tx_register4cal_listoutput_view.php";s:4:"fa44";s:44:"view/class.tx_register4cal_register_view.php";s:4:"4f07";s:52:"view/class.tx_register4cal_userdefinedfield_view.php";s:4:"f3c8";s:18:"view/locallang.xml";s:4:"b920";}',
 	'suggests' => array(
 	),
 );
